# motoman_move_sim

./: README.md
lwa4p_move_control/: CMakeLists.txt  package.xml
lwa4p_move_control/launch/: lwa4p_move.launch  lwa4p_move.launch~  rqtpub_for_lwa4p.launch  rqtpub_for_lwa4p.launch~
lwa4p_move_control/src/: lwa4p_move (another copy).cpp~  lwa4p_move.cpp  lwa4p_move1.cpp  lwa4p_move_matlab_jointstate.cpp~  talkerformove.cpp  talkerformove.cpp~
lwa4p_moveit_config/: CMakeLists.txt  package.xml
lwa4p_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_names.yaml  lwa4p.srdf  ompl_planning.yaml
lwa4p_moveit_config/launch/: demo.launch  lwa4p_gazebo_moveit.launch  lwa4p_moveit_controller_manager.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
motoman_move_glass/: CMakeLists.txt  package.xml
motoman_move_glass/config/: gazebo_control.yaml  joint_configurations.yaml  joint_state_controller.yaml  mh50_controller.yaml  mh5_controller.yaml
motoman_move_glass/launch/: motoman_sim_gazebo.launch  motoman_sim_movegroup.launch  test_visual_both.launch
motoman_move_glass/mesh/: pr10.stl
motoman_move_glass/results/: traj_results.csv
motoman_move_glass/rviz/: robots.rviz
motoman_move_glass/src/: motoman_sim_movegroup.cpp  motoman_sim_movegroup.cpp.autosave  motoman_sim_movegroup_backup.cpp
motoman_move_glass/urdf/: common.xacro  glass_panel.urdf.xacro  gripper.urdf.xacro  robots.urdf  robots.urdf.xacro  vacuum_gripper.urdf.xacro
motoman_move_glass_moveit_config/: CMakeLists.txt  package.xml
motoman_move_glass_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  motoman_mh5_mh50.srdf  ompl_planning.yaml  ros_controllers.yaml
motoman_move_glass_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  motoman_mh5_mh50_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
panda_move/: CMakeLists.txt  package.xml
panda_move/launch/: panda_sim_movegroup.launch
panda_move/src/: panda_sim_movegroup (copy).cpp  panda_sim_movegroup.cpp
panda_moveit_config/: package.xml
panda_moveit_config/config/: ompl_planning.yaml  panda.srdf  ros_controllers.yaml
panda_moveit_config/launch/: moveit.rviz  ros_controllers.launch
